# wiRedPanda

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml  build_cmake.yml  deploy.yml
app/: CMakeLists.txt  elementeditor.cpp  elementeditor.h  elementfactory.cpp  enums.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
app/element/: srflipflop.cpp  truth_table.cpp  truth_table.h
app/resources/memory/dark/: memory_dark.qrc
test/: CMakeLists.txt
